Added REST API Support

--- a/rebar.config
+++ b/rebar.config
@@ -2,7 +2,10 @@
     debug_info, parse_transform, lager_transform,
     {i, "./apps/ePubSub/include/"}
     ]}.
-{deps, []}.
+{deps, [
+    {jsone,  "1.5.5"},   %% JSON Encode/Decode
+    {cowboy, "2.8.0"}]}. %% HTTP Server
+
 {plugins, [rebar3_hex]}.
 
 {relx, [{release, {ePubSub, "0.1.0"},
